--- a/01.html
+++ b/01.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../day04/css/reset.css">
   <title>Document</title>
   <style>
     .wrap{
@@ -15,17 +15,21 @@
       display: flex;
       flex-wrap: wrap;
       flex-direction: row;
-      justify-content: space-around;
+      /* justify-content: space-around; */
     }
 
     .col{
-      width: 100px;
-      height: 200px;
+      width: 180px;
+      height: 150px;
       font-size: 50px;
+      margin: 10px;
     }
     .col1{background-color: #faa;}
     .col2{background-color: #afa;}
     .col3{background-color: #aaf;}
+    .col4{background-color: #a7f;}
+    .col5{background-color: #a08;}
+
   </style>
 </head>
 <body>
@@ -35,6 +39,8 @@
 <div class="col col1">1</div>
 <div class="col col2">2</div>
 <div class="col col3">3</div>
+<div class="col col4">4</div>
+<div class="col col5">5</div>
 </div>
 </body>
 </html>
