--- a/02-1.html
+++ b/02-1.html
@@ -18,7 +18,8 @@
     font-size: 100px;
     background-color: burlywood;}
     .item:nth-child(even){flex-direction: row-reverse;}
-
+/* item .pic記得要空格  
+圖片大小要先設定好 否則在設定item. pic img 這裡圖片尺寸在網頁上會出錯 */
   </style>
 </head>
 
