--- a/02-1.html
+++ b/02-1.html
@@ -8,7 +8,7 @@
   <title>Document</title>
   <style>
     .wrap{width: 900px;
-      margin: auto;}
+      margin: auto;}  
 
     .item{display: flex;}
     .item .pic{width: 50%;}
@@ -19,7 +19,7 @@
     background-color: burlywood;}
     .item:nth-child(even){flex-direction: row-reverse;}
 /* item .pic記得要空格  
-圖片大小要先設定好 否則在設定item. pic img 這裡圖片尺寸在網頁上會出錯 */
+ */
   </style>
 </head>
 
@@ -32,16 +32,19 @@
     <div class="item">
       <div class="pic"><img src="https://picsum.photos/seed/picsum/300/200" alt=""></div>
       <div class="txt">04</div>
-    </div><div class="item">
+    </div>
+    <div class="item">
       <div class="pic"><img src="https://picsum.photos/seed/picsum/300/200" alt=""></div>
-      <div class="txt">01</div>
-    </div><div class="item">
+      <div class="txt">01</div> 
+    </div>
+    <div class="item">
       <div class="pic"><img src="https://picsum.photos/seed/picsum/300/200" alt=""></div>
       <div class="txt">01</div>
     </div><div class="item">
       <div class="pic"><img src="https://picsum.photos/seed/picsum/300/200" alt=""></div>
       <div class="txt">01</div>
     </div>
+    
  </div>
 
 
