--- a/02-2.html
+++ b/02-2.html
@@ -16,6 +16,7 @@
       flex-wrap: wrap;
       flex-direction: row;
       /* justify-content: space-around; */
+      align-content: flex-start;
     }
 
     .col{
@@ -24,8 +25,7 @@
       font-size: 50px;
       margin: 10px;
     }
-    .col1{background-color: #faa;
-    margin: auto;}
+    .col1{background-color: #faa;}
     .col2{background-color: #afa;}
     .col3{background-color: #aaf;}
     .col4{background-color: #a7f;}
@@ -38,10 +38,10 @@
 
 <div class="wrap">
 <div class="col col1">1</div>
-<!-- <div class="col col2">2</div>
+<div class="col col2">2</div>
 <div class="col col3">3</div>
 <div class="col col4">4</div>
-<div class="col col5">5</div> -->
+<div class="col col5">5</div>
 </div>
 </body>
 </html>
